--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,17 +1,39 @@
 {
-  "includes": ["./*.graphql"],
+  "name": "mStable Subgraphs Monorepo",
+  "includes": ["./thegraph.graphql"],
   "excludes": ["./packages/*/build/*.graphql", "**/schema.generated.graphql"],
   "projects": {
      "@mstable/governance-subgraph": {
+       "name": "mStable Governance Subgraph",
        "schemaPath": "./packages/governance/schema.graphql"
      },
      "@mstable/protocol-subgraph": {
-       "schemaPath": "./packages/protocol/schema.graphql"
+       "name": "mStable Protocol Subgraph",
+       "schemaPath": "./packages/protocol/build/schema.generated.graphql",
+       "includes": ["./*.graphql", "./packages/protocol/**/*.graphql"],
+       "extensions": {
+         "endpoints": {
+           "Mainnet": {
+             "url": "https://api.thegraph.com/subgraphs/name/mstable/mstable-protocol"
+           },
+           "Mainnet (staging)": {
+             "url": "https://api.thegraph.com/subgraphs/name/mstable/mstable-protocol-staging"
+           },
+           "Kovan": {
+             "url": "https://api.thegraph.com/subgraphs/name/mstable/mstable-protocol-kovan"
+           },
+           "Ropsten": {
+             "url": "https://api.thegraph.com/subgraphs/name/mstable/mstable-protocol-ropsten"
+           }
+         }
+       }
      },
      "@mstable/ecosystem-subgraph": {
+       "name": "mStable Ecosystem Subgraph",
        "schemaPath": "./packages/ecosystem/schema.graphql"
      },
      "@mstable/subgraph-utils": {
+       "name": "mStable Subgraph Utilities",
        "schemaPath": "./packages/utils/schema.graphql"
      }
   }
