--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "chalk": "^4.1.0",
-    "lerna": "^3.22.1",
-    "mustache": "^4.0.1",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "yargs": "^16.1.0"
+    "lerna": "^3.22.1"
   },
   "scripts": {
     "codegen": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run codegen",
@@ -23,5 +18,13 @@
     "deploy:staging": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:staging",
     "deploy:ropsten": "lerna exec --parallel --scope @mstable/protocol-subgraph -- yarn run deploy:ropsten",
     "deploy:kovan": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:kovan"
+  },
+  "dependencies": {
+    "@graphprotocol/graph-cli": "^0.19.0",
+    "@graphprotocol/graph-ts": "^0.19.0",
+    "@mstable/protocol": "^1.3.1",
+    "mustache": "^4.0.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   }
 }
