--- a/packages/ecosystem/package.json
+++ b/packages/ecosystem/package.json
@@ -20,9 +20,7 @@
     "deploy:mainnet": "yarn graph deploy mStable/mStable-ecosystem --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
     "lint": "yarn run prettier './src/**/*.{ts,tsx}' --write"
   },
-  "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.19.0",
-    "@graphprotocol/graph-ts": "^0.19.0",
-    "@mstable/subgraph-utils": "file:../utils"
+  "dependencies": {
+    "@mstable/subgraph-utils": "0.1.0"
   }
 }
