Add support for Save v2
- Add support for v2 savings contracts
- Set `version` and `token` fields for `SavingsContract`
- Make `totalCredits` a nullable field (for v2)
- Deprecate the `Account` and `CreditBalance` entities, as they are not needed for Save v2
- Add support for Boosted Savings Vaults

--- a/packages/protocol/subgraph.template.yaml
+++ b/packages/protocol/subgraph.template.yaml
@@ -26,6 +26,8 @@ dataSources:
       abis:
         - name: SavingsManager
           file: ../../node_modules/@mstable/protocol/build/contracts/SavingsManager.json
+        - name: SavingsContract
+          file: ./abis/SavingsContract.json
         - name: Masset
           file: ../../node_modules/@mstable/protocol/build/contracts/Masset.json
         - name: ERC20Detailed
@@ -133,7 +135,7 @@ templates:
         - Token
       abis:
         - name: SavingsContract
-          file: ../../node_modules/@mstable/protocol/build/contracts/SavingsContract.json
+          file: ./abis/SavingsContract.json
       eventHandlers:
         - event: AutomaticInterestCollectionSwitched(bool)
           handler: handleAutomaticInterestCollectionSwitched
