Deprecate `Account`, `CreditBalance`
- Deprecate the `Account` and `CreditBalance` entities, as they are not needed for Save v2

--- a/packages/ecosystem/subgraph.template.yaml
+++ b/packages/ecosystem/subgraph.template.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
 description: mStable Ecosystem Subgraph
-repository: https://gitlab.com/mstable/mstable-subgraphs-monorepo
+repository: https://github.com/mstable/mstable-subgraphs-monorepo
 schema:
   file: ./schema.generated.graphql
 
