--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,11 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "bootstrap": {
+      "npmClientArgs": ["--no-package-lock"]
+    }
+  },
   "useWorkspaces": true,
   "version": "0.0.0"
 }
