--- a/packages/protocol/subgraph.template.yaml
+++ b/packages/protocol/subgraph.template.yaml
@@ -51,6 +51,8 @@ dataSources:
           handler: handleInterestCollected
         - event: InterestDistributed(indexed address,uint256)
           handler: handleInterestDistributed
+        - event: FractionUpdated(uint256 fraction)
+          handler: handleFractionUpdated
 
   {{#massets}}
   # {{name}}
@@ -195,3 +197,5 @@ templates:
           handler: handleSavingsDeposited
         - event: CreditsRedeemed(indexed address,uint256,uint256)
           handler: handleCreditsRedeemed
+        - event: FractionUpdated(uint256 fraction)
+          handler: handleFractionUpdate
