--- a/packages/protocol/subgraph.template.yaml
+++ b/packages/protocol/subgraph.template.yaml
@@ -122,6 +122,8 @@ dataSources:
       abis:
         - name: CurvedMasset
           file: ./abis/CurvedMasset.json
+        - name: InvariantValidator
+          file: ./abis/InvariantValidator.json
         - name: ERC20Detailed
           file: ../../node_modules/@mstable/protocol/build/contracts/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
         - name: BasketManager
