--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "deploy:kovan": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:kovan"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.19.0",
-    "@graphprotocol/graph-ts": "^0.19.0",
-    "@mstable/protocol": "^2.0.0",
+    "@graphprotocol/graph-cli": "0.20.0",
+    "@graphprotocol/graph-ts": "0.20.0",
+    "@mstable/protocol": "2.0.0",
     "mustache": "^4.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
