--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -11,11 +11,11 @@
     "codegen:graph": "yarn run graph codegen",
     "codegen": "yarn run codegen:schema && yarn run codegen:graph",
     "build": "yarn graph build",
-    "prepare:local": "yarn run --silent mustache ../../config/development.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:ropsten": "yarn run --silent mustache ../../config/ropsten.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:kovan": "yarn run --silent mustache ../../config/kovan.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:staging": "yarn run --silent mustache ../../config/staging.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:mainnet": "yarn run --silent mustache ../../config/mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "prepare-codegen": "func() { node ./combine-abis.js && yarn run --silent mustache \"../../config/$1.json\" subgraph.template.yaml > subgraph.yaml && yarn run codegen; }; func",
+    "prepare:ropsten": "yarn run prepare-codegen ropsten",
+    "prepare:kovan": "yarn run prepare-codegen kovan",
+    "prepare:staging": "yarn run prepare-codegen staging",
+    "prepare:mainnet": "yarn run prepare-codegen mainnet",
     "create:local": "yarn graph create mStable/mStable-protocol --node http://127.0.0.1:8020",
     "deploy:local": "yarn graph deploy mStable/mStable-protocol --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy:ropsten": "yarn graph deploy mStable/mStable-protocol-ropsten --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
