--- a/packages/feeders/package.json
+++ b/packages/feeders/package.json
@@ -11,7 +11,7 @@
     "codegen:graph": "yarn run graph codegen",
     "codegen": "yarn run codegen:schema && yarn run codegen:graph",
     "build": "yarn graph build",
-    "prepare-codegen": "func() { node ./combine-abis.js && yarn run --silent mustache \"../../config/$1.json\" subgraph.template.yaml > subgraph.yaml && yarn run codegen; }; func",
+    "prepare-codegen": "func() { yarn run --silent mustache \"../../config/$1.json\" subgraph.template.yaml > subgraph.yaml && yarn run codegen; }; func",
     "prepare:ropsten": "yarn run prepare-codegen ropsten",
     "prepare:mainnet": "yarn run prepare-codegen mainnet",
     "deploy:ropsten": "yarn graph deploy mStable/mStable-feeders-ropsten --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
