Track more events
- Track BalClaimed, FeesConverterd and PriceCoefficientUpdated
- Add priceCoefficient field
- Update staked token account on RewardPaid

--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -10,7 +10,9 @@
     "prepare-codegen": "func() { yarn run --silent mustache \"../../config/$1.json\" subgraph.template.yaml > subgraph.yaml && yarn run codegen; }; func",
     "prepare:mainnet": "yarn run prepare-codegen mainnet",
     "prepare:ropsten": "yarn run prepare-codegen ropsten",
+    "prepare:kovan": "yarn run prepare-codegen kovan",
     "deploy:ropsten": "yarn graph deploy mstable/mstable-staking-ropsten --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
+    "deploy:kovan": "yarn graph deploy mstable/mstable-staking-kovan --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
     "deploy:mainnet": "yarn graph deploy mstable/mstable-staking --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
     "lint": "yarn run prettier './src/**/*.{ts,tsx}' --write"
   },
