--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -8,6 +8,7 @@
     "codegen": "yarn run codegen:schema && yarn run codegen:graph",
     "build": "yarn graph build",
     "prepare-codegen": "func() { yarn run --silent mustache \"../../config/$1.json\" subgraph.template.yaml > subgraph.yaml && yarn run codegen; }; func",
+    "prepare:config": "yarn run prepare:mainnet",
     "prepare:mainnet": "yarn run prepare-codegen mainnet",
     "prepare:ropsten": "yarn run prepare-codegen ropsten",
     "prepare:kovan": "yarn run prepare-codegen kovan",
