--- a/packages/governance/package.json
+++ b/packages/governance/package.json
@@ -7,6 +7,7 @@
     "codegen:graph": "yarn run graph codegen",
     "codegen": "yarn run codegen:schema && yarn run codegen:graph",
     "build": "yarn graph build",
+    "prepare:config": "yarn run prepare:mainnet",
     "prepare:ropsten": "yarn run --silent mustache ../../config/ropsten.json subgraph.template.yaml > subgraph.yaml",
     "prepare:kovan": "yarn run --silent mustache ../../config/kovan.json subgraph.template.yaml > subgraph.yaml",
     "prepare:staging": "yarn run --silent mustache ../../config/staging.json subgraph.template.yaml > subgraph.yaml",
