--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -12,6 +12,7 @@
     "codegen": "yarn run codegen:schema && yarn run codegen:graph",
     "build": "yarn graph build",
     "prepare-codegen": "func() { yarn run --silent mustache \"../../config/$1.json\" subgraph.template.yaml > subgraph.yaml && yarn run codegen; }; func",
+    "prepare:config": "yarn run prepare:mainnet",
     "prepare:ropsten": "yarn run prepare-codegen ropsten",
     "prepare:kovan": "yarn run prepare-codegen kovan",
     "prepare:staging": "yarn run prepare-codegen staging",
